# mod_7

mod_7/mod_7/: alembic.ini  models.py  my_select.py  pyproject.toml  seed.py
mod_7/mod_7/alembic/: env.py
