[tool.poetry]
name = "mod-7"
version = "0.1.0"
description = ""
authors = ["michaldzi <michal310@poczta.fm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
